--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,14 @@
 .btn {
   margin: 30px 0;
 }
+.lotto {
+  display: flex;
+  justify-content: center;
+}
+.ball {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  color: blue;
+}
