--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
   margin: 30px 0;
 }
 .lotto {
+  margin: 0 auto;
   display: flex;
-  justify-content: center;
+  width: 30%;
+  justify-content: space-around;
 }
 .ball {
   width: 50px;
